<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="mdtp_date_v1_monthyear">MMMM yyyy</string>
    <string name="mdtp_day_picker_description">Month grid of days</string>
    <string name="mdtp_deleted_key">%1$s deleted</string>
    <string name="mdtp_done_label">Done</string>
    <string name="mdtp_hour_picker_description">Hours circular slider</string>
    <string name="mdtp_item_is_selected">%1$s selected</string>
    <string name="mdtp_minute_picker_description">Minutes circular slider</string>
    <string name="mdtp_select_day">Select month and day</string>
    <string name="mdtp_select_hours">Select hours</string>
    <string name="mdtp_select_minutes">Select minutes</string>
    <string name="mdtp_select_year">Select year</string>
    <string name="mdtp_year_picker_description">Year list</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="mdtp_cancel">@android:string/cancel</string>
    <string name="mdtp_day_of_week_label_typeface">sans-serif</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="action_about">关于</string>
    <string name="action_cancel">取消</string>
    <string name="action_check_update">检查更新</string>
    <string name="action_city_manage">城市管理</string>
    <string name="action_default">默认</string>
    <string name="action_enable_live_wallpaper">启用动态壁纸</string>
    <string name="action_ok">确定</string>
    <string name="action_settings">设置</string>
    <string name="action_skin">主题皮肤</string>
    <string name="activity_about_info_class_title_changelog">更新日志</string>
    <string name="activity_about_info_class_title_other">其他</string>
    <string name="activity_about_info_class_title_thanks">感谢</string>
    <string name="activity_about_info_current_version">当前版本: %1$s (%2$s)</string>
    <string name="activity_choose_city_choose_by_province">根据省市选择</string>
    <string name="activity_choose_city_et_hint_search">搜索城市</string>
    <string name="activity_choose_city_hot_cities">热门城市</string>
    <string name="activity_choose_city_search_results">搜索结果</string>
    <string name="activity_choose_city_tip_locate_success">定位成功：%1$s</string>
    <string name="activity_city_manage_action_restore">撤销</string>
    <string name="activity_city_manage_tip_city_delete_fail">删除失败</string>
    <string name="activity_city_manage_tip_city_delete_success">%1$s 已成功移除</string>
    <string name="activity_city_manage_tip_list_empty">空空如也~点击右下角按钮添加城市</string>
    <string name="activity_home_action_locate_now">立即定位</string>
    <string name="activity_home_class_title_air_quality">空气质量</string>
    <string name="activity_home_class_title_data_source">数据来源 中国天气网</string>
    <string name="activity_home_class_title_hour_forecast">每小时预报</string>
    <string name="activity_home_class_title_living_index">生活指数</string>
    <string name="activity_home_class_title_precipitation_probability">降水概率</string>
    <string name="activity_home_class_title_sun">日出与日落</string>
    <string name="activity_home_class_title_wind_and_humidity">风和湿度</string>
    <string name="activity_home_class_title_wind_speed_forecast">风速预报</string>
    <string name="activity_home_drawer_list_item_city_manage">城市管理</string>
    <string name="activity_home_menu_action_exit">退出</string>
    <string name="activity_home_menu_action_settings">设置</string>
    <string name="activity_home_menu_action_share">分享天气</string>
    <string name="activity_home_menu_action_weather_preview">动态背景预览</string>
    <string name="activity_home_refresh_time">%1$s 刷新</string>
    <string name="activity_home_str_humidity">湿度</string>
    <string name="activity_home_str_visibility">能见度</string>
    <string name="activity_home_str_no2">NO2[二氧化氮]</string>
    <string name="activity_home_str_pm10">PM10[可吸入颗粒物]</string>
    <string name="activity_home_str_pm25">PM2.5[细颗粒物]</string>
    <string name="activity_home_str_so2">SO2[二氧化硫]</string>
    <string name="activity_home_str_wind_direction">风向</string>
    <string name="activity_home_str_wind">风力</string>
    <string name="activity_home_str_wind_speed">风速</string>
    <string name="activity_home_tip_locate_success">定位成功：%1$s</string>
    <string name="activity_home_tip_no_city">请添加一个城市</string>
    <string name="activity_home_tip_no_city_sprout">一个城市也木有~</string>
    <string name="activity_home_tip_no_update">当前版本为最新版本</string>
    <string name="activity_home_tip_old_weather_data">天气数据过旧，刷新天气后重试</string>
    <string name="activity_home_tip_share_weather_fail">当前未添加城市或无天气数据</string>
    <string name="activity_home_type_and_real_feel_temp">体感 %1$s°</string>
    <string name="activity_home_yesterday_weather">昨日天气 %1$s %2$s° ~ %3$s°</string>
    <string name="activity_live_wallpaper_settings_item_assign_weather_type">指定天气类型</string>
    <string name="activity_live_wallpaper_settings_item_follow_current_weather_type">跟随当前天气类型</string>
    <string name="activity_settings_class_background">后台</string>
    <string name="activity_settings_class_customize">自定义</string>
    <string name="activity_settings_class_launcher">桌面</string>
    <string name="activity_settings_class_notification">通知栏</string>
    <string name="activity_settings_class_other">其他</string>
    <string name="activity_settings_item_auto_check_for_app_update">启动应用时检查应用更新</string>
    <string name="activity_settings_item_auto_locate">自动定位</string>
    <string name="activity_settings_item_auto_refresh_interval">刷新频率</string>
    <string name="activity_settings_item_auto_refresh_mode">刷新模式</string>
    <string name="activity_settings_item_auto_refresh_weather">后台自动刷新天气</string>
    <string name="activity_settings_item_custom_homepage_background">自定义主页背景</string>
    <string name="activity_settings_item_desc_evening_remind_time">每天 %1$s</string>
    <string name="activity_settings_item_desc_morning_remind_time">每天 %1$s</string>
    <string name="activity_settings_item_desc_night_refresh_mode">当日23:00 - 次日05:00</string>
    <string name="activity_settings_item_desc_widget_click_event">自定义小部件热区点击事件</string>
    <string name="activity_settings_item_evening_remind_time">晚间提醒时间</string>
    <string name="activity_settings_item_live_wallpaper">动态壁纸</string>
    <string name="activity_settings_item_morning_remind_time">早晨提醒时间</string>
    <string name="activity_settings_item_night_refresh_mode">夜间停止更新天气</string>
    <string name="activity_settings_item_notification_background_color">背景颜色</string>
    <string name="activity_settings_item_notification_display">启用通知栏</string>
    <string name="activity_settings_item_notification_style">通知栏样式</string>
    <string name="activity_settings_item_notification_text_color">文字颜色</string>
    <string name="activity_settings_item_permission_description">权限说明</string>
    <string name="activity_settings_item_real_time_weather_interface">实时天气接口</string>
    <string name="activity_settings_item_show_living_index_info">显示生活指数信息</string>
    <string name="activity_settings_item_status_bar_display">状态栏显示</string>
    <string name="activity_settings_item_switch_evening_remind">晚间天气提醒</string>
    <string name="activity_settings_item_switch_morning_evening_remind">启用早晚天气提醒</string>
    <string name="activity_settings_item_switch_morning_remind">早晨天气提醒</string>
    <string name="activity_settings_item_type_of_forecast_chart">未来天气趋势图类型</string>
    <string name="activity_settings_item_weather_warning_notify">天气预警通知</string>
    <string name="activity_settings_item_widget_background_color">插件背景颜色</string>
    <string name="activity_settings_item_widget_click_event">小部件点击事件</string>
    <string name="activity_settings_item_widget_clock_font_style">插件时钟字体样式</string>
    <string name="activity_settings_item_widget_text_color">插件颜色</string>
    <string name="activity_settings_tip_custom_homepage_background_clear_fail">清除失败，当前未添加自定义背景</string>
    <string name="activity_settings_tip_custom_homepage_background_clear_success">清除成功</string>
    <string name="activity_settings_tip_evening_remind_time_set_success">设置成功，每天 %1$s 提醒次日天气</string>
    <string name="activity_settings_tip_morning_remind_time_set_success">设置成功，每天 %1$s 提醒当日天气</string>
    <string name="activity_settings_tip_permissions_granted">所有权限已授予</string>
    <string name="activity_settings_tip_set_success">设置成功</string>
    <string name="activity_settings_tip_set_success_and_work_at_next_refresh">设置成功，下次刷新起生效</string>
    <string name="activity_title_about">关于</string>
    <string name="activity_title_choose_city">搜索城市</string>
    <string name="activity_title_city_manage">@string/activity_home_drawer_list_item_city_manage</string>
    <string name="activity_title_feedback">反馈</string>
    <string name="activity_title_live_wallpaper_settings">动态壁纸设置</string>
    <string name="activity_title_settings">应用设置</string>
    <string name="activity_title_widget_click_event">@string/activity_settings_item_widget_click_event</string>
    <string name="activity_widget_click_event_class_hot_spot">热区</string>
    <string name="activity_widget_click_event_date_spot">日期</string>
    <string name="activity_widget_click_event_other_spot">其他</string>
    <string name="activity_widget_click_event_time_spot">时间</string>
    <string name="activity_widget_click_event_tips">"1. 点击城市名切换城市
2. 部分部件可能不存在某些热区
3. 若插件点击没有反应，检查是否阻止设置的热区应用相互启动唤醒，例如Flyme5手机管家内的应用相互启动开关"</string>
    <string name="add_city">添加城市</string>
    <string name="app_name">Pure天气</string>
    <string name="app_name_launcher">天气</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_refresh_weather_interval_five_hour">5小时</string>
    <string name="auto_refresh_weather_interval_half_an_hour">30分钟</string>
    <string name="nav_group_other">其他</string>
</resources>